# ndlcom

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  FindNDLCom.cmake.in  LICENSE  Makefile  Makefile.cmake  NDLCom-uninstalled.pc.in  NDLCom.pc.in  NDLCom.pro  README  README.md  crc  default.nix  manifest.xml  ndlcom-config.cmake  ndlcom-uninstalled.pc.in  ndlcom.pc.in  ndlcom_core-uninstalled.pc.in  package.xml
doc/: .gitignore  Doxyfile  Makefile  NDLCom_long_de.md  NDLCom_long_en.md  NDLCom_short_de.md  NDLCom_short_en.md  concepts.md  crc.md  cross_compiling.md  ndlcom_header.tex  ndlcom_logo.tex  protocol.md  standalone_inscape_export.tex
doc/tex/: Makefile  bytestream_encoding.tex  ndlcom_header.tex  osi_model.tex
forms/: AvailableRepresentations.ui  communication_statistic_widget.ui  composer.ui  interface.ui  interface_container.ui  interface_container_widget.ui  interface_widget.ui  ndlcom.ui  show_representations.ui  traffic.ui  udpcom_connect_dialog.ui
gui/: CMakeLists.txt  main.cpp  testGUI.cpp  testGUI.h
include/: Protocol.h
include/NDLCom/: AvailableRepresentations.h  CommandLineArgument.h  Header.h  InterfaceWidget.h  Message.h  ParserState.h  Protocol.h  StaticTools.h  Types.h  communication_statistic_widget.h  composer.h  interface.h  interface_container.h  interface_container_widget.h  interface_traffic.h  message.h  message_traffic.h  ndlcom.h  ndlcom_container.h  representation_mapper.h  serialcom.h  udpcom.h
include/ndlcom/: Bridge.h  Bridge.hpp  BridgeHandler.h  BridgeHandler.hpp  BridgeHandlerBase.hpp  Crc.h  Encoder.h  ExternalInterface.h  ExternalInterface.hpp  ExternalInterfaceBase.hpp  ExternalInterfaceParseUri.hpp  HandlerBase.hpp  HandlerCommon.hpp  Header.h  HeaderPrepare.h  Interfaces.h  InternalHandler.h  InternalHandler.hpp  InternalHandlerBase.hpp  Message.hpp  Node.h  Node.hpp  NodeHandler.h  NodeHandler.hpp  NodeHandlerBase.hpp  Parser.h  ParserState.h  Payload.hpp  Protocol.h  Routing.h  RoutingTable.hpp  Types.h  list.h
include/ndlcom_core/: Crc.h  Header.h  ParserState.h  Protocol.h  RoutingTable.hpp  Types.h
kernelmodule/: Makefile  README  ndlcom.c
scripts/: bwLimit.sh  ndlcomBridge.service  ndlcomDemoBridge.sh  perfsteps.sh  rc-script.sh  send_random_data.pl  send_random_data.sh  teeStueck.sh
src/: AvailableRepresentations.cpp  Bridge.c  Bridge.cpp  BridgeHandler.c  BridgeHandler.cpp  BridgeHandlerBase.cpp  CMakeLists.txt  Crc.c  Encoder.c  ExternalInterface.c  ExternalInterface.cpp  ExternalInterfaceBase.cpp  ExternalInterfaceParseUri.cpp  HandlerBase.cpp  HandlerCommon.cpp  Header.c  HeaderPrepare.c  InterfaceWidget.cpp  Interfaces.c  InternalHandler.c  InternalHandler.cpp  InternalHandlerBase.cpp  Message.cpp  NDLCom.qrc  Node.c  Node.cpp  NodeHandler.c  NodeHandler.cpp  NodeHandlerBase.cpp  Parser.c  Payload.cpp  ProtocolEncode.c  ProtocolParser.c  Routing.c  StaticTools.cpp  communication_statistic_widget.cpp  composer.cpp  data_line_input.cpp  data_line_input.h  hex_input.cpp  (+17 more)
src/images/: serial_traffic.xcf
test/: CMakeLists.txt  decodedPackets.dat.orig  encodedPackets_crc8.dat.orig  encoderDecoder_pingPong.cpp  ndlcomEncode.cpp  printTable.c  test-decoder.c  testCrc.c  testDecoder.cpp  testEncoder.cpp  testEncoderDecoder.sh.in  testEncoderVar.c  timing-decoder.cpp
testGUI/: main.cpp  testGUI.cpp  testGUI.pro  testGUI.ui
tools/: CMakeLists.txt  minimalExample.c  minimalExample.cpp  ndlcomBridge.cpp  ndlcomBridgeExternalInterface.cpp  ndlcomBridgeExternalInterface.hpp  ndlcomBridgeInternalHandler.cpp  ndlcomBridgeInternalHandler.hpp  ndlcomBridgeParseUri.cpp  ndlcomBridgeParseUri.hpp  ndlcomPacketConsumer.cpp  ndlcomPacketCreator.cpp  ndlcomPacketProducer.cpp
xml/: CMakeLists.txt  DeviceIds.c.xsl  DeviceIds.h.xsl  DeviceIds.xml  DeviceIds.xsd  Devices.vhd.xsl  Makefile  NDLComDeviceIds.pm.xsl  NDLComDeviceIds.yml.xsl  sherpa.xml
xml/generate/: DeviceIds.c.xsl  DeviceIds.h.xsl  NDLComDeviceIds.rb.xsl
